# ollama-python-lab

./: .gitignore  LICENSE  README.md  chatbot_logs.json  check_module_installed.py  env_sample  requirements.txt  test-ollama-api.py
.devcontainer/: Dockerfile  devcontainer.json
ai-agents/: ai.txt  hello-world.ipynb
ai-agents/db/: chroma.sqlite3
ai-llm-engineering/: ctx_memory.py  ctx_memory_stream.py  intro_transformer.py  intro_transformer_enhansed.py  logging_example.py  ollama_python.py
ai-llm-engineering/agents/: simple_agent.py  simple_agent_lngraph.py  simple_agent_lngraph_tools.py
ai-llm-engineering/langchain/: chatbot_qa.py  intro_lang.py  text_splitter.py
ai-llm-engineering/rag/: rag_pdf_simple.py  rag_streamlit.py  simple_rag.py
aws-bedrock/: basic_prompt.py  bedrock_client.py  chain_of_thought.py  check_models.py  few_shot_prompt.py  instructional_prompt.py  open_ended_prompt.py  system_prompt.py  zero_shot_chain.py
code-reviewer/: .gitignore  README.md  app.py  code_analyzer.py  config.py  context_manager.py  requirements.txt  run.sh  utils.py
code-reviewer/examples/: README.md  (+3 more)
coding-agent/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
coding-agent/config/: agent_config.yaml
coding-agent/docs/: README.md  architecture.md
coding-agent/src/agent/: core.py  memory.py  prompts.py
coding-agent/src/knowledge/: embeddings.py  indexer.py  vector_store.py
coding-agent/src/models/: config.py  schemas.py
coding-agent/src/parsers/: code_parser.py  log_parser.py  markdown_parser.py
coding-agent/src/tools/: code_analyzer.py  code_editor.py  database.py  documentation.py  file_reader.py
coding-agent/src/utils/: db_utils.py  file_utils.py
deepseek/: code-assistant.py  deepseek.py  multi-assistant.py  research-assistant.py
light-llm/: .gitignore  LICENSE  README.md  requirements.txt  setup.py
llama4/: llama4-attention-code.py  self-attention.py  tokenizer.py
ml-ex/: bag-of-words.py
panda/: ex1.py
pr-check/: pr-content-reader.py
pr-review/: app.py  app_individual.py  config.py  github_pr_client.py  main.py  ollama_client.py  ollama_client_individual.py  utils.py
process-files/: analyse_content.py  file-walker2.py  file_walker.py  ollama_client.py
(+27 files in other folders)
